--- a/pc/UI_ADHPAbP06.html
+++ b/pc/UI_ADHPAbP06.html
@@ -110,7 +110,7 @@
                                                                 <td colspan="3">
                                                                     <fieldset class="box_radio_group" style="pointer-events: none;">
                                                                         <legend class="sr_only">참여자 분류 선택</legend>
-                                                                        <div class="radio_item">
+                                                                        <div class="new_radio_item">
                                                                             <input type="radio" id="ptcpType1" name="ptcpType" value="graduate" checked>
                                                                             <label for="ptcpType1" class="ptcp_radiocustom">
                                                                                 <span class="radio_ui" aria-hidden="true"></span>
@@ -119,7 +119,7 @@
                                                                             </label>
                                                                         </div>
 
-                                                                        <div class="radio_item">
+                                                                        <div class="new_radio_item">
                                                                             <input type="radio" id="ptcpType2" name="ptcpType" value="youth">
                                                                             <label for="ptcpType2" class="ptcp_radiocustom">
                                                                                 <span class="radio_ui" aria-hidden="true"></span>
@@ -354,7 +354,7 @@
                                                         <tbody>
                                                             <tr>
                                                                 <td>
-                                                                    <div class="radio_item">
+                                                                    <div class="new_radio_item">
                                                                         <input type="radio" name="univSelect" id="univ1" />
                                                                         <label for="univ1">
                                                                             <span class="radio_ui" aria-hidden="true"></span>
@@ -368,7 +368,7 @@
                                                             </tr>
                                                             <tr>
                                                                 <td>
-                                                                    <div class="radio_item">
+                                                                    <div class="new_radio_item">
                                                                         <input type="radio" name="univSelect" id="univ2" />
                                                                         <label for="univ2">
                                                                             <span class="radio_ui" aria-hidden="true"></span>
@@ -382,7 +382,7 @@
                                                             </tr>
                                                             <tr>
                                                                 <td>
-                                                                    <div class="radio_item">
+                                                                    <div class="new_radio_item">
                                                                         <input type="radio" name="univSelect" id="univ3" />
                                                                         <label for="univ3">
                                                                             <span class="radio_ui" aria-hidden="true"></span>
@@ -396,7 +396,7 @@
                                                             </tr>
                                                             <tr>
                                                                 <td>
-                                                                    <div class="radio_item">
+                                                                    <div class="new_radio_item">
                                                                         <input type="radio" name="univSelect" id="univ4" />
                                                                         <label for="univ4">
                                                                             <span class="radio_ui" aria-hidden="true"></span>
@@ -410,7 +410,7 @@
                                                             </tr>
                                                             <tr>
                                                                 <td>
-                                                                    <div class="radio_item">
+                                                                    <div class="new_radio_item">
                                                                         <input type="radio" name="univSelect" id="univ5" />
                                                                         <label for="univ5">
                                                                             <span class="radio_ui" aria-hidden="true"></span>
@@ -424,7 +424,7 @@
                                                             </tr>
                                                             <tr>
                                                                 <td>
-                                                                    <div class="radio_item">
+                                                                    <div class="new_radio_item">
                                                                         <input type="radio" name="univSelect" id="univ6" />
                                                                         <label for="univ6">
                                                                             <span class="radio_ui" aria-hidden="true"></span>
@@ -438,7 +438,7 @@
                                                             </tr>
                                                             <tr>
                                                                 <td>
-                                                                    <div class="radio_item">
+                                                                    <div class="new_radio_item">
                                                                         <input type="radio" name="univSelect" id="univ7" />
                                                                         <label for="univ7">
                                                                             <span class="radio_ui" aria-hidden="true"></span>
@@ -452,7 +452,7 @@
                                                             </tr>
                                                             <tr>
                                                                 <td>
-                                                                    <div class="radio_item">
+                                                                    <div class="new_radio_item">
                                                                         <input type="radio" name="univSelect" id="univ8" />
                                                                         <label for="univ8">
                                                                             <span class="radio_ui" aria-hidden="true"></span>
@@ -466,7 +466,7 @@
                                                             </tr>
                                                             <tr>
                                                                 <td>
-                                                                    <div class="radio_item">
+                                                                    <div class="new_radio_item">
                                                                         <input type="radio" name="univSelect" id="univ9" />
                                                                         <label for="univ9">
                                                                             <span class="radio_ui" aria-hidden="true"></span>
@@ -480,7 +480,7 @@
                                                             </tr>
                                                             <tr>
                                                                 <td>
-                                                                    <div class="radio_item">
+                                                                    <div class="new_radio_item">
                                                                         <input type="radio" name="univSelect" id="univ10" />
                                                                         <label for="univ10">
                                                                             <span class="radio_ui" aria-hidden="true"></span>
