--- a/pc/UI_ADHPAbS12.html
+++ b/pc/UI_ADHPAbS12.html
@@ -60,11 +60,12 @@
                                         <div class="donepage">
                                             <div class="done_notice">
                                                 <figure class="mb24"><img src=""><img src="./images/mypage/ico80_chk_green.svg"></figure>
-                                                <p>참여신청서가 회수 완료되었습니다. <br>참여신청서 제출을 취소하거나, 수정 후에 다시 제출할 수 있습니다.</p>
+                                                <p class="h2_sb">참여신청서 제출이 완료되었습니다.</p>
+                                                <p class="b1_r">참여신청서 제출을 취소하거나, 수정 후에 다시 제출할 수 있습니다.</p>
                                             </div>
 
                                             <div class="done_btn mt40">
-                                                <a href="#none" class="btn large type01" onclick="" aria-label="졸업생 특화프로그램 페이지로 이동">확인</a>
+                                                <a href="#none" class="btn fill big type01" onclick="" aria-label="졸업생 특화프로그램 페이지로 이동">확인</a>
                                             </div>                                  
                                         </div>
                                     </div>
