--- a/pc/UI_ADHPAbS14.html
+++ b/pc/UI_ADHPAbS14.html
@@ -60,11 +60,26 @@
                                         <div class="donepage">
                                             <div class="done_notice">
                                                 <figure class="mb24"><img src=""><img src="./images/mypage/ico80_chk_green.svg"></figure>
-                                                <p>수정이 완료 되었습니다.</p>
+                                                <p class="h2_sb">수정이 완료 되었습니다.</p>
                                             </div>
 
+                                            <ul class="done_info mt80">
+                                                <li>
+                                                    <div class="tit"><p>성명</p></div>
+                                                    <div class="desc"><p>홍길동</p></div>
+                                                </li> 
+                                                <li>
+                                                    <div class="tit"><p>참여 대학</p></div>
+                                                    <div class="desc"><p>AAA 대학교</p></div>
+                                                </li> 
+                                                <li>
+                                                    <div class="tit"><p>신청일</p></div>
+                                                    <div class="desc"><p>2025-01-01</p></div>
+                                                </li>
+                                            </ul>
+
                                             <div class="done_btn mt40">
-                                                <a href="#none" class="btn large type01" onclick="" aria-label="졸업생 특화프로그램 페이지로 이동">확인</a>
+                                                <a href="#none" class="btn big fill type01" onclick="" aria-label="졸업생 특화프로그램 페이지로 이동">확인</a>
                                             </div>                                  
                                         </div>
                                     </div>
