--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                     <td></td>
                     <td>참여신청서 - 목록 없음</td>
                     <td>UI_ADHPAbM01</td>
-                    <td class="status">작업중</td>
+                    <td class="status">완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPAbM01.html" target="_blank">PC</a>
@@ -119,7 +119,7 @@
                     <td></td>
                     <td>참여신청서 - 목록 있음</td>
                     <td>UI_ADHPAbM02</td>
-                    <td class="status">작업중</td>
+                    <td class="status">완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPAbM02.html" target="_blank">PC</a>
@@ -135,7 +135,7 @@
                     <td></td>
                     <td>참여신청서 - 등록</td>
                     <td>UI_ADHPAbS03</td>
-                    <td class="status">작업중</td>
+                    <td class="status">완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPAbS03.html" target="_blank">PC</a>
