--- a/pc/UI_ADHPAbM01.html
+++ b/pc/UI_ADHPAbM01.html
@@ -51,10 +51,10 @@
                                 <div class="mypage">
                                     <div class="progmg">
                                         <ul class="tab_title topTab" role="tablist">
+                                            <!-- D: 활성화시 class[active] add -->
                                             <li aria-controls="" class="active"><button type="button" role="tab" aria-selected="true"><span>참여신청서</span></button></li>
                                             <li aria-controls=""><button type="button" role="tab" aria-selected="false"><span>참여 프로그램</span></button></li>
                                             <li aria-controls=""><button type="button" role="tab" aria-selected="false"><span>상담 이력</span></button></li>
-                                            <!-- D: 활성화시 class[active] add -->
                                         </ul>
 
                                         <div class="box_notice_wrap mt24">
@@ -68,9 +68,10 @@
 
                                         <div class="pa_page_empty mt80">
                                             <figure class="mb24"><img src=""><img src="./include/images/ico60_warning_navy.svg"></figure>
-                                            <p>작성하신 졸업생 특화프로그램 참여신청서가 없습니다.</p>
+                                            <p class="t3_sb">작성하신 졸업생 특화프로그램 참여신청서가 없습니다.</p>
                                             <div class="box_btn_wrap mt40">
-                                                <a href="#none" class="btn large type01 fill" onclick="">신청서 작성</a>
+                                                <a href="./UI_ADHPAaM01.html" class="btn big type02 btn_s_r">이전</a>
+                                                <a href="./UI_ADHPAbS03.html" class="btn big type01 fill">신청서 작성</a>
                                             </div>                                  
                                         </div>
                                     </div>
