--- a/pc/UI_ADHPAbM02.html
+++ b/pc/UI_ADHPAbM02.html
@@ -72,7 +72,7 @@
                                             </ul>
                                         </div>
 
-                                        <div class="pa_page_empty mt40">
+                                        <div class="pa_page_empty pa_page_abm02 mt40">
                                             <div class="box_table_wrap">
                                                 <div class="box_table_hd">
                                                     <p class="tit">전체 <span class="txt_total">1111</span>건</p>
@@ -92,13 +92,13 @@
                                                 <table class="box_table auto-count new_table">
                                                     <caption>번호, 참여년도, 참여대학명, 신청일자, 진행상태, 담당자 을(를) 제공하는 표</caption>
                                                     <colgroup>
-                                                        <col style="width: 5%">
-                                                        <col style="width: 13.75%">
-                                                        <col style="width: 33.75%">
-                                                        <col style="width: 17.5%">
-                                                        <col style="width: 10%">
-                                                        <col style="width: 10%">
-                                                        <col style="width: 10%">
+                                                        <col style="width: 70px">
+                                                        <col style="width: 130px">
+                                                        <col style="width: auto">
+                                                        <col style="width: 160px">
+                                                        <col style="width: 100px">
+                                                        <col style="width: 100px">
+                                                        <col style="width: 110px">
                                                     </colgroup>
                                                     <thead>
                                                         <tr>
@@ -211,7 +211,7 @@
                                             </div> 
                                             
                                             <div class="box_btn_wrap ml_auto mt40">
-                                                <a href="#none" class="btn large type01 fill" onclick="">신청서 작성</a>
+                                                <a href="./UI_ADHPAbS03.html" class="btn big type01 fill">신청서 작성</a>
                                             </div>
                                         </div>
                                     </div>
