--- a/pc/UI_ADHPAbS04.html
+++ b/pc/UI_ADHPAbS04.html
@@ -110,7 +110,7 @@
                                                                 <td colspan="3">
                                                                     <fieldset class="box_radio_group" style="pointer-events: none;">
                                                                         <legend class="sr_only">참여자 분류 선택</legend>
-                                                                        <div class="radio_item">
+                                                                        <div class="new_radio_item">
                                                                             <input type="radio" id="ptcpType1" name="ptcpType" value="graduate" checked>
                                                                             <label for="ptcpType1" class="ptcp_radiocustom">
                                                                                 <span class="radio_ui" aria-hidden="true"></span>
@@ -119,7 +119,7 @@
                                                                             </label>
                                                                         </div>
 
-                                                                        <div class="radio_item">
+                                                                        <div class="new_radio_item">
                                                                             <input type="radio" id="ptcpType2" name="ptcpType" value="youth">
                                                                             <label for="ptcpType2" class="ptcp_radiocustom">
                                                                                 <span class="radio_ui" aria-hidden="true"></span>
