--- a/pc/UI_ADHPAbS13.html
+++ b/pc/UI_ADHPAbS13.html
@@ -60,11 +60,11 @@
                                         <div class="donepage">
                                             <div class="done_notice">
                                                 <figure class="mb24"><img src=""><img src="./images/mypage/ico80_chk_green.svg"></figure>
-                                                <p>참여신청서 삭제가 완료되었습니다.</p>
+                                                <p class="h2_sb">참여신청서 삭제가 완료되었습니다.</p>
                                             </div>
 
                                             <div class="done_btn mt40">
-                                                <a href="#none" class="btn large type01" onclick="" aria-label="졸업생 특화프로그램 페이지로 이동">확인</a>
+                                                <a href="#none" class="btn big fill type01" onclick="" aria-label="졸업생 특화프로그램 페이지로 이동">확인</a>
                                             </div>                                  
                                         </div>
                                     </div>
