--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             .btn_box a+a {margin-left: 4px; background-color: #006722;}
             .btn_box a:hover {background-color: #000;}
             tr td:last-child a+a {margin-left: 8px;}
+            a.none {color: #555;}
         </style>
         <script>
             document.addEventListener("DOMContentLoaded",() => {
@@ -75,7 +76,7 @@
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPAaM01.html" target="_blank">PC</a>
-                        <a href="./mobile/UI_ADHPAaM01.html" target="_blank">MO</a>
+                        <a href="./mobile/UI_ADHPAaM01.html" target="_blank" class="none">MO</a>
                     </td>
                 </tr>
                 <tr>
@@ -91,7 +92,7 @@
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPAaM02.html" target="_blank">PC</a>
-                        <a href="./mobile/UI_ADHPAaM02.html" target="_blank">MO</a>
+                        <a href="./mobile/UI_ADHPAaM02.html" target="_blank" class="none">MO</a>
                     </td>
                 </tr>
                 <tr>
@@ -107,7 +108,7 @@
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPAbM01.html" target="_blank">PC</a>
-                        <a href="./mobile/UI_ADHPAbM01.html" target="_blank">MO</a>
+                        <a href="./mobile/UI_ADHPAbM01.html" target="_blank" class="none">MO</a>
                     </td>
                 </tr>
                 <tr>
@@ -123,7 +124,7 @@
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPAbM02.html" target="_blank">PC</a>
-                        <a href="./mobile/UI_ADHPAbM02.html" target="_blank">MO</a>
+                        <a href="./mobile/UI_ADHPAbM02.html" target="_blank" class="none">MO</a>
                     </td>
                 </tr>
                 <tr>
@@ -139,7 +140,7 @@
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPAbS03.html" target="_blank">PC</a>
-                        <a href="./mobile/UI_ADHPAbS03.html" target="_blank">MO</a>
+                        <a href="./mobile/UI_ADHPAbS03.html" target="_blank" class="none">MO</a>
                     </td>
                 </tr>
                 <tr>
@@ -155,7 +156,7 @@
                     <td>신청 및 처리현황 부분 보류</td>
                     <td>
                         <a href="./pc/UI_ADHPAbS04.html" target="_blank">PC</a>
-                        <a href="./mobile/UI_ADHPAbS04.html" target="_blank">MO</a>
+                        <a href="./mobile/UI_ADHPAbS04.html" target="_blank" class="none">MO</a>
                     </td>
                 </tr>
                 <tr>
@@ -170,8 +171,8 @@
                     <td class="status"></td>
                     <td></td>
                     <td>
-                        <a href="" target="_blank">PC</a>
-                        <a href="" target="_blank">MO</a>
+                        <a href="" target="_blank" class="none">PC</a>
+                        <a href="" target="_blank" class="none">MO</a>
                     </td>
                 </tr>
                 <tr>
@@ -187,7 +188,7 @@
                     <td>배경사이트 html 수정예정</td>
                     <td>
                         <a href="./pc/UI_ADHPAbP06.html" target="_blank">PC</a>
-                        <a href="./mobile/UI_ADHPAbP06.html" target="_blank">MO</a>
+                        <a href="./mobile/UI_ADHPAbP06.html" target="_blank" class="none">MO</a>
                     </td>
                 </tr>
                 <tr>
@@ -202,8 +203,8 @@
                     <td class="status"></td>
                     <td></td>
                     <td>
-                        <a href="" target="_blank">PC</a>
-                        <a href="" target="_blank">MO</a>
+                        <a href="" target="_blank" class="none">PC</a>
+                        <a href="" target="_blank" class="none">MO</a>
                     </td>
                 </tr>
                 <tr>
@@ -218,8 +219,8 @@
                     <td class="status"></td>
                     <td></td>
                     <td>
-                        <a href="" target="_blank">PC</a>
-                        <a href="" target="_blank">MO</a>
+                        <a href="" target="_blank" class="none">PC</a>
+                        <a href="" target="_blank" class="none">MO</a>
                     </td>
                 </tr>
                 <tr>
@@ -234,8 +235,8 @@
                     <td class="status"></td>
                     <td></td>
                     <td>
-                        <a href="" target="_blank">PC</a>
-                        <a href="" target="_blank">MO</a>
+                        <a href="" target="_blank" class="none">PC</a>
+                        <a href="" target="_blank" class="none">MO</a>
                     </td>
                 </tr>
                 <tr>
@@ -250,8 +251,8 @@
                     <td class="status"></td>
                     <td></td>
                     <td>
-                        <a href="" target="_blank">PC</a>
-                        <a href="" target="_blank">MO</a>
+                        <a href="" target="_blank" class="none">PC</a>
+                        <a href="" target="_blank" class="none">MO</a>
                     </td>
                 </tr>
                 <tr>
@@ -266,8 +267,8 @@
                     <td class="status"></td>
                     <td></td>
                     <td>
-                        <a href="" target="_blank">PC</a>
-                        <a href="" target="_blank">MO</a>
+                        <a href="" target="_blank" class="none">PC</a>
+                        <a href="" target="_blank" class="none">MO</a>
                     </td>
                 </tr>
                 <tr>
@@ -282,8 +283,8 @@
                     <td class="status"></td>
                     <td></td>
                     <td>
-                        <a href="" target="_blank">PC</a>
-                        <a href="" target="_blank">MO</a>
+                        <a href="" target="_blank" class="none">PC</a>
+                        <a href="" target="_blank" class="none">MO</a>
                     </td>
                 </tr>
                 <tr>
@@ -298,8 +299,8 @@
                     <td class="status"></td>
                     <td></td>
                     <td>
-                        <a href="" target="_blank">PC</a>
-                        <a href="" target="_blank">MO</a>
+                        <a href="" target="_blank" class="none">PC</a>
+                        <a href="" target="_blank" class="none">MO</a>
                     </td>
                 </tr>
                 <tr>
@@ -314,8 +315,8 @@
                     <td class="status"></td>
                     <td></td>
                     <td>
-                        <a href="" target="_blank">PC</a>
-                        <a href="" target="_blank">MO</a>
+                        <a href="" target="_blank" class="none">PC</a>
+                        <a href="" target="_blank" class="none">MO</a>
                     </td>
                 </tr>
                 <tr>
@@ -330,8 +331,8 @@
                     <td class="status"></td>
                     <td></td>
                     <td>
-                        <a href="" target="_blank">PC</a>
-                        <a href="" target="_blank">MO</a>
+                        <a href="" target="_blank" class="none">PC</a>
+                        <a href="" target="_blank" class="none">MO</a>
                     </td>
                 </tr>
                 <tr>
@@ -346,8 +347,8 @@
                     <td class="status"></td>
                     <td></td>
                     <td>
-                        <a href="" target="_blank">PC</a>
-                        <a href="" target="_blank">MO</a>
+                        <a href="" target="_blank" class="none">PC</a>
+                        <a href="" target="_blank" class="none">MO</a>
                     </td>
                 </tr>
                 <tr>
@@ -362,8 +363,8 @@
                     <td class="status"></td>
                     <td></td>
                     <td>
-                        <a href="" target="_blank">PC</a>
-                        <a href="" target="_blank">MO</a>
+                        <a href="" target="_blank" class="none">PC</a>
+                        <a href="" target="_blank" class="none">MO</a>
                     </td>
                 </tr>
                 <tr>
@@ -378,8 +379,8 @@
                     <td class="status"></td>
                     <td></td>
                     <td>
-                        <a href="" target="_blank">PC</a>
-                        <a href="" target="_blank">MO</a>
+                        <a href="" target="_blank" class="none">PC</a>
+                        <a href="" target="_blank" class="none">MO</a>
                     </td>
                 </tr>
                 <tr>
@@ -394,8 +395,8 @@
                     <td class="status"></td>
                     <td></td>
                     <td>
-                        <a href="" target="_blank">PC</a>
-                        <a href="" target="_blank">MO</a>
+                        <a href="" target="_blank" class="none">PC</a>
+                        <a href="" target="_blank" class="none">MO</a>
                     </td>
                 </tr>
                 <tr>
@@ -410,8 +411,8 @@
                     <td class="status"></td>
                     <td></td>
                     <td>
-                        <a href="" target="_blank">PC</a>
-                        <a href="" target="_blank">MO</a>
+                        <a href="" target="_blank" class="none">PC</a>
+                        <a href="" target="_blank" class="none">MO</a>
                     </td>
                 </tr>
                 <tr>
@@ -427,7 +428,7 @@
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPAbS11.html" target="_blank">PC</a>
-                        <a href="./mobile/UI_ADHPAbS11.html" target="_blank">MO</a>
+                        <a href="./mobile/UI_ADHPAbS11.html" target="_blank" class="none">MO</a>
                     </td>
                 </tr>
                 <tr>
@@ -443,7 +444,7 @@
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPAbS12.html" target="_blank">PC</a>
-                        <a href="./mobile/UI_ADHPAbS12.html" target="_blank">MO</a>
+                        <a href="./mobile/UI_ADHPAbS12.html" target="_blank" class="none">MO</a>
                     </td>
                 </tr>
                 <tr>
@@ -459,7 +460,7 @@
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPAbS13.html" target="_blank">PC</a>
-                        <a href="./mobile/UI_ADHPAbS13.html" target="_blank">MO</a>
+                        <a href="./mobile/UI_ADHPAbS13.html" target="_blank" class="none">MO</a>
                     </td>
                 </tr>
                 <tr>
@@ -475,7 +476,7 @@
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPAbS14.html" target="_blank">PC</a>
-                        <a href="./mobile/UI_ADHPAbS14.html" target="_blank">MO</a>
+                        <a href="./mobile/UI_ADHPAbS14.html" target="_blank" class="none">MO</a>
                     </td>
                 </tr>
                 <tr>
@@ -491,7 +492,7 @@
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPAbS15.html" target="_blank">PC</a>
-                        <a href="./mobile/UI_ADHPAbS15.html" target="_blank">MO</a>
+                        <a href="./mobile/UI_ADHPAbS15.html" target="_blank" class="none">MO</a>
                     </td>
                 </tr>
             </tbody>
