--- a/pc/UI_ADHPAbP06.html
+++ b/pc/UI_ADHPAbP06.html
@@ -256,7 +256,7 @@
                                                                                 <input type="checkbox" name="PopchkRegion" id="PopchkRegion7" class="PopchkRegion" value="7">
                                                                                 <label for="PopchkRegion7">울산</label>
                                                                             </span>
-                                                                            <span class="mr0">
+                                                                            <span>
                                                                                 <input type="checkbox" name="PopchkRegion" id="PopchkRegion8" class="PopchkRegion" value="8">
                                                                                 <label for="PopchkRegion8">세종</label>
                                                                             </span>
@@ -292,7 +292,7 @@
                                                                                 <input type="checkbox" name="PopchkRegion" id="PopchkRegion16" class="PopchkRegion" value="16">
                                                                                 <label for="PopchkRegion16">강원</label>
                                                                             </span>
-                                                                            <span class="mr0">
+                                                                            <span>
                                                                                 <input type="checkbox" name="PopchkRegion" id="PopchkRegion17" class="PopchkRegion" value="17">
                                                                                 <label for="PopchkRegion17">제주</label>
                                                                             </span>
