--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     <td>운영대학 목록</td>
                     <td>UI_ADHPAaM01</td>
                     <td class="status">작업중</td>
-                    <td></td>
+                    <td>시안확정 이후에 작업예정</td>
                     <td>
                         <a href="./pc/UI_ADHPAaM01.html" target="_blank">PC</a>
                         <a href="./mobile/UI_ADHPAaM01.html" target="_blank" class="none">MO</a>
@@ -88,7 +88,7 @@
                     <td></td>
                     <td>운영대학 목록 - 프로그램 조회 팝업</td>
                     <td>UI_ADHPAaM02</td>
-                    <td class="status">작업중</td>
+                    <td class="status">완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPAaM02.html" target="_blank">PC</a>
@@ -248,11 +248,11 @@
                     <td></td>
                     <td>개인정보 수집·이용·제공에 대한 동의서(참여자용)</td>
                     <td>UI_ADHPAbP10</td>
-                    <td class="status"></td>
+                    <td class="status">완료</td>
                     <td></td>
                     <td>
-                        <a href="" target="_blank" class="none">PC</a>
-                        <a href="" target="_blank" class="none">MO</a>
+                        <a href="./UI_ADHPAbP10.html" target="_blank">PC</a>
+                        <a href="./UI_ADHPAbP10.html" target="_blank" class="none">MO</a>
                     </td>
                 </tr>
                 <tr>
